archive/go/k3s-local/persist-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persist-worker
  labels:
    app: persist-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: persist-worker
  template:
    metadata:
      labels:
        app: persist-worker
    spec:
      containers:
        - name: persist-worker
          image: jiangfz/online-chatroom-persist-worker:latest
          imagePullPolicy: Always
