archive/go/k3s-local/ws-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ws-server
  template:
    metadata:
      labels:
        app: ws-server
    spec:
      containers:
        - name: ws-server
          image: jiangfz/online-chatroom-websocket:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ws-service
spec:
  selector:
    app: ws-server
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
